@@ -100,7 +100,7 @@ def parseDataSetString(dataset):
         assert len(keyValues['shmem'])>=3, "shmem in datasource string, but value=%s has < 3 characters?" % keyValues['shmem']
         keyValues['instr']=keyValues['shmem'][0:3].upper()
     else:
-        raise Exception("neither exp= nor shmem= appears in datasource specification")
+        raise Exception("neither exp= nor shmem= appears in datasource specification=%s"%dataset)
     knownInstruments = 'AMO  CXI  DIA  MEC  MOB  SXR  USR  XCS  XPP'.split()
     assert keyValues['instr'] in knownInstruments, "Could not find KNOWN instrument in datasource string: %s. Found %s. Looking for one of %s" % \
         (dataset, keyValues['instr'],knownInstruments)
